Add requirements.txt check to tox.ini commands

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,10 @@ min_version = 4.0
 skipsdist = true
 
 [testenv]
-allowlist_externals = poetry
+allowlist_externals = poetry,sh
 commands =
     poetry install
     ruff format --check .
     ruff check .
     mypy .
+    sh -c 'poetry export --format requirements.txt | diff requirements.txt -'
