--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skipsdist = true
 
 [testenv]
 allowlist_externals = poetry,sh
+skip_install = true
 commands =
     poetry install
     ruff format --check .
