--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 qreader = "^3.12"
+opencv-python = "^4.8.1.78"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.7"
