Add --install-types flag to mypy call

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ commands =
     poetry install
     ruff format --check .
     ruff check .
-    mypy .
+    mypy --install-types .
     sh -c 'poetry export --format requirements.txt | diff requirements.txt -'
