--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11"
 qreader = "^3.12"
 opencv-python = "^4.8.1.78"
+qrcode = "^7.4.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.7"
