--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,19 @@
-[tool.poetry]
+[project]
 name = "tracktracks"
 version = "0.1.0"
 description = "Scan visual cues and translate them into rail tracks"
 authors = ["BobMcFry"]
 license = "GNU General Public License Version 3"
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "opencv-python>=4.10.0.84",
+    "qrcode>=8.0",
+    "qreader>=3.14",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-qreader = "^3.12"
-opencv-python = "^4.8.1.78"
-qrcode = "^7.4.2"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.1.7"
-mypy = "^1.7.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+dev-dependencies = [
+    "mypy>=1.11.2",
+    "ruff>=0.6.8",
+]
