Replace poetry with uv

--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,10 @@ min_version = 4.0
 skipsdist = true
 
 [testenv]
-allowlist_externals = poetry,sh
+allowlist_externals = uv,sh
 skip_install = true
 commands =
-    poetry install
+    uv sync --frozen
     ruff format --check .
     ruff check .
     mypy --install-types .
-    sh -c 'poetry export --format requirements.txt | diff requirements.txt -'
